fill the pubspec.yaml with appropriate author, repository, name and description fields

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,9 @@
-name: Converter
-description: Goofy Unit Converter.
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+name: goofy_converter
+description: A weird Goofy unit converter app written on Flutter/Dart.
 version: 0.0.1+1
+authors:
+  - Maxeem (America) Shemetov <maxeem.america@gmail.com>
+repository: https://github.com/maxeema/flutter-goofy-converter
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
