--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   package_info: ^0.4.0+6
   flutter_svg: ^0.14.1
   url_launcher: ^5.1.4
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
