update app info

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,16 @@
-name: goofy_converter
-description: A weird Goofy unit converter app written on Flutter/Dart.
-version: 0.5.1+2
+name: converter
+description: Converter is a unit converter app written on Flutter
+version: 0.5.3+3
 authors:
-  - Maxeem (America) Shemetov <maxeem.america@gmail.com>
-repository: https://github.com/maxeema/flutter-goofy-converter
+  - iMax Shemetov <imax.shemetov@gmail.com>
+repository: https://github.com/maxeema/converter
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.9.0"
 
 dependencies:
   flutter:
@@ -16,21 +20,18 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
-  shared_preferences: ^0.5.3
-  package_info: ^0.4.0+6
-  flutter_svg: ^0.14.1
-  url_launcher: ^5.1.4
-  fluttertoast: ^3.1.3
+  package_info: ^0.4.3
+#  flutter_svg: ^0.18.0
+  url_launcher: ^5.5.0
+  fluttertoast: ^7.0.2
+  websafe_svg: ^1.1.4
+  get_it: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -42,33 +43,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/data/goofy_units.json
-    - assets/icons/app_icon.svg
-    - assets/icons/area.svg
-    - assets/icons/currency.svg
-    - assets/icons/digital.svg
-    - assets/icons/length.svg
-    - assets/icons/mass.svg
-    - assets/icons/energy.svg
-    - assets/icons/time.svg
-    - assets/icons/volume.svg
+    - assets/icon.png
+    - assets/data/
+    - assets/icons/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font.
   fonts:
     - family: Raleway
       fonts:
         - asset: fonts/Raleway-Regular.ttf
         - asset: fonts/Raleway-ExtraLight.ttf
           weight: 200
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
