--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ dependencies:
   cupertino_icons: ^0.1.3
 
   package_info: ^0.4.3
-#  flutter_svg: ^0.18.0
   url_launcher: ^5.5.0
   fluttertoast: ^7.0.2
   websafe_svg: ^1.1.4
+  flutter_hooks: any
   get_it: any
 
 dev_dependencies:
