--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,16 +18,17 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  flutter_cupertino_localizations: ^1.0.1
 
-  cupertino_icons: ^0.1.3
+  flutter_cupertino_localizations: any
+  cupertino_icons: any
 
-  package_info: ^0.4.3
-  url_launcher: ^5.5.0
-  fluttertoast: ^7.0.2
-  websafe_svg: ^1.1.4
+  package_info: any
+  url_launcher: any
+  fluttertoast: any
+  websafe_svg: any
   flutter_hooks: any
   get_it: any
+#  google_fonts: any
 
 dev_dependencies:
   flutter_test:
