--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,23 +11,26 @@ if (flutterRoot == null) {
     throw new IllegalStateException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
-}
-
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
-}
-
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+} else if (System.getenv()["CI"]) {
+    // CodeMagic CI
+    keystoreProperties.setProperty('storePassword', System.getenv('FCI_KEYSTORE_PASSWORD'))
+    keystoreProperties.setProperty('keyPassword', System.getenv('FCI_KEY_PASSWORD'))
+    keystoreProperties.setProperty('keyAlias', System.getenv('FCI_KEY_ALIAS'))
+    keystoreProperties.setProperty('storeFile', System.getenv("FCI_BUILD_DIR") + "/../keystore/maxeem.jks")
+} else {
+    // GitHub Actions
+    keystoreProperties.setProperty('storePassword', System.getenv('KEY_STORE_PASSWORD'))
+    keystoreProperties.setProperty('keyPassword', System.getenv('KEY_PASSWORD'))
+    keystoreProperties.setProperty('keyAlias', 'key0')
+    keystoreProperties.setProperty('storeFile', '../maxeem.jks')
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -47,24 +50,23 @@ android {
         resConfigs "en"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode localProperties.getProperty('flutter.versionCode')?.toInteger() ?: 1
+        versionName localProperties.getProperty('flutter.versionName') ?: "0.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
         release {
-            if (System.getenv()["CI"]) { // CI=true is exported by Codemagic
-                storeFile file(System.getenv()["FCI_BUILD_DIR"] + "/../keystore/maxeem.jks")
-                storePassword System.getenv()["FCI_KEYSTORE_PASSWORD"]
-                keyAlias System.getenv()["FCI_KEY_ALIAS"]
-                keyPassword System.getenv()["FCI_KEY_PASSWORD"]
-            } else {
-//                storeFile file("/path/to/local/myreleasekey.keystore")
-//                storePassword "password"
-//                keyAlias "MyReleaseKey"
-//                keyPassword "password"
-            }
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+        debug {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+            storeFile rootProject.file('debug.keystore')
         }
     }
     buildTypes {
@@ -74,6 +76,7 @@ android {
         debug {
             applicationIdSuffix '.dev'
             versionNameSuffix '-dev'
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -84,6 +87,13 @@ flutter {
 }
 
 dependencies {
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
