--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,10 @@
 name: converter
 description: Converter is a unit converter app written on Flutter
-version: 0.5.3+3
+version: 0.5.5
 authors:
-  - iMax Shemetov <imax.shemetov@gmail.com>
+  - Max Shemetov <imax.shemetov@gmail.com>
 repository: https://github.com/maxeema/converter
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 environment:
   sdk: ">=2.9.0"
