--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: converter
 description: Converter is a unit converter app written on Flutter
-version: 0.5.5
+version: 0.5.6+6
 authors:
   - Max Shemetov <imax.shemetov@gmail.com>
 repository: https://github.com/maxeema/converter
