ci: update main GitHub actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,18 @@
-name: App Build CI
+name: CI
 
-# This workflow is triggered on pushes to the repository.
 on:
   push:
-    branches:
-      - "!*"
     tags:
       - "v*"
 jobs:
   build:
-    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          channel: 'stable'
       - run: flutter pub get
-#      - run: flutter analyze --no-pub --no-fatal-infos --no-fatal-warnings
-#      - run: flutter test --no-pub
-#      - uses: actions/setup-java@v1
-#        with:
-#          java-version: '12.x'
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
