ci: make main.yml CI as Android only

--- a/.github/workflows/android-distribution.yml
+++ b/.github/workflows/android-distribution.yml
@@ -1,9 +1,9 @@
-name: CI
+name: android distribution CI
 
 on:
   push:
     tags:
-      - "v*"
+      - "android-*"
 jobs:
   build:
     runs-on: ubuntu-latest
