--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -2,19 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>generateAppStoreInformation</key>
-	<false/>
-	<key>method</key>
-	<string>app-store</string>
-	<key>signingStyle</key>
-	<string>automatic</string>
-	<key>stripSwiftSymbols</key>
-	<true/>
+        <key>method</key>
+        <string>development</string>
 	<key>teamID</key>
 	<string>KCKD42NRF8</string>
-	<key>uploadBitcode</key>
-	<false/>
-	<key>uploadSymbols</key>
-	<true/>
+        <key>signingStyle</key>
+        <string>automatic</string>
 </dict>
 </plist>
