--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -1,4 +1,4 @@
-name: ios distribution CI
+name: ios distribution
 
 on:
   push:
@@ -13,18 +13,19 @@ jobs:
         with:
           channel: 'stable'
       - run: flutter pub get
-#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
       - run: flutter build ios --no-codesign
-      - run: |
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
-          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
-        working-directory: ios
+      - uses: actions/upload-artifact@master
+        with:
+          name: ios-build
+          path: build/ios/iphoneos
+      - uses: actions/download-artifact@master
+        with:
+          name: ios-build
       - uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_IOS_APPID}}
           token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers
-#          file: build/ios/ipa/converter.ipa
-          file: ios/build/Runner.ipa
+          file: Runner.ipa
           releaseNotesFile: RELEASE
       - run: Great Job, Max!
