--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
+    <dict>
         <key>method</key>
-        <string>development</string>
-	<key>teamID</key>
-	<string>KCKD42NRF8</string>
-        <key>signingStyle</key>
-        <string>automatic</string>
-</dict>
+        <string>ad-hoc</string>
+        <key>uploadBitcode</key>
+        <false/>
+        <key>uploadSymbols</key>
+        <true/>
+    </dict>
 </plist>
