ci: 9th iOS build trial

--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -16,7 +16,7 @@ jobs:
 #      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
       - run: flutter build ios
       - run: |
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive 
+          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
           xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
         working-directory: ios
       - uses: wzieba/Firebase-Distribution-Github-Action@v1
