--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -1,23 +1,74 @@
-name: android distribution CI
+name: ios distribution CI
 
 on:
   push:
     tags:
-      - "ios-*"
+      - "ci-ios-*"
 jobs:
-  build:
+  build-ios:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.CERTIFICATIONS_P12_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_DISTR_2 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+          ls -l $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P $P12_PASSWORD -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
-      - uses: wzieba/Firebase-Distribution-Github-Action@v1
+      - run: |
+          flutter build ipa --export-options-plist=ios/ExportOptions.plist
+          ls -l build/ios/ipa
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
+          name: artifact-ios
+          path: build/ios/ipa/converter.ipa
+
+  upload-ios:
+    needs: build-ios
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact-ios
+      - run: ls -l .
+      - name: Upload to Firebase App Distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{secrets.FIREBASE_IOS_APPID}}
           token: ${{secrets.FIREBASE_TOKEN}}
-          groups: testers
-          file: build/ios/ipa/converter.ipa
-          releaseNotesFile: RELEASE
+          groups: testers-ios
+          file: converter.ipa
+      - name: Delete artifact
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          name: artifact-ios
+      - run: echo "Great Job, Max!"
