--- a/.github/workflows/android-distribution.yml
+++ b/.github/workflows/android-distribution.yml
@@ -13,17 +13,17 @@ jobs:
         with:
           channel: 'stable'
       - run: flutter pub get
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+#      - uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
       - run: flutter build apk
         env:
           KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-      - uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
-          token: ${{secrets.FIREBASE_TOKEN}}
-          groups: testers
-          file: build/app/outputs/apk/release/app-release.apk
-          releaseNotesFile: RELEASE
+#      - uses: wzieba/Firebase-Distribution-Github-Action@v1
+#        with:
+#          appId: ${{secrets.FIREBASE_APP_ID}}
+#          token: ${{secrets.FIREBASE_TOKEN}}
+#          groups: testers
+#          file: build/app/outputs/apk/release/app-release.apk
+#          releaseNotesFile: RELEASE
