--- a/.github/workflows/android-distribution.yml
+++ b/.github/workflows/android-distribution.yml
@@ -3,7 +3,7 @@ name: android distribution CI
 on:
   push:
     tags:
-      - "android-*"
+      - "ci-andriod-*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,18 +12,15 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-      - run: flutter pub get
-#      - uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
       - run: flutter build apk
         env:
           KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-#      - uses: wzieba/Firebase-Distribution-Github-Action@v1
-#        with:
-#          appId: ${{secrets.FIREBASE_APP_ID}}
-#          token: ${{secrets.FIREBASE_TOKEN}}
-#          groups: testers
-#          file: build/app/outputs/apk/release/app-release.apk
-#          releaseNotesFile: RELEASE
+      - uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          token: ${{secrets.FIREBASE_TOKEN}}
+          groups: testers
+          file: build/app/outputs/flutter-apk/app-release.apk
+          releaseNotesFile: RELEASE
+
