--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -6,5 +6,14 @@
     <string>KCKD42NRF8</string>
     <key>method</key>
     <string>app-store</string>
+    <key>signingStyle</key>
+    <string>manual</string>
+    <key>signingCertificate</key>
+    <string>Apple Distribution: Maksim Shemetov</string>
+    <key>provisioningProfiles</key>
+    <dict>
+     <key>KCKD42NRF8.maxeem.america.flutter.converter</key>
+     <string>Converter GitHub Actions Dist</string>
+ </dict>
 </dict>
 </plist>
