--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -3,7 +3,7 @@ name: ios distribution CI
 on:
   push:
     tags:
-      - "ios-*"
+      - "ci-ios-*"
 jobs:
   build:
     runs-on: macos-latest
@@ -28,25 +28,46 @@ jobs:
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          #
+          
+          # prints secrets
+          echo
+          echo "BUILD_CERTIFICATE_BASE64: $BUILD_CERTIFICATE_BASE64"
+          echo "P12_PASSWORD: $P12_PASSWORD"
+          echo "BUILD_PROVISION_PROFILE_BASE64: $BUILD_PROVISION_PROFILE_BASE64"
+          echo "KEYCHAIN_PASSWORD: $KEYCHAIN_PASSWORD"
+          echo
+          
+          # dump variables
+          echo "Dump variables"
           set
+          echo
           
           # import certificate and provisioning profile from secrets
           echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo "CERTIFICATE_PATH: $CERTIFICATE_PATH"
           echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-
+          echo "CERTIFICATE_PATH: $PP_PATH"
+          #
+          set
+          
           # create temporary keychain
+          echo "create temporary keychain, step 1: $KEYCHAIN_PASSWORD, $KEYCHAIN_PATH"
           security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+          echo "create temporary keychain, step 2"
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          echo "create temporary keychain, step 3"
           security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
 
           # import certificate to keychain
+          echo "import certificate to keychain, step 1"
           security import $CERTIFICATE_PATH -P $P12_PASSWORD -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          echo "import certificate to keychain, step 2"
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           # apply provisioning profile
+          echo "apply provisioning profile, step 1"
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          echo "apply provisioning profile, step 2"
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - name: Build IPA
         run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
