--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -6,14 +6,11 @@
     <string>KCKD42NRF8</string>
     <key>method</key>
     <string>app-store</string>
-    <key>signingStyle</key>
     <string>manual</string>
-    <key>signingCertificate</key>
-    <string>Apple Distribution</string>
     <key>provisioningProfiles</key>
     <dict>
      <key>maxeem.america.flutter.converter</key>
-     <string>Converter GitHub Actions Dist</string>
+     <string>Converter - iOS App Development provisioning</string>
  </dict>
 </dict>
 </plist>
