--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -9,11 +9,11 @@
     <key>signingStyle</key>
     <string>manual</string>
     <key>signingCertificate</key>
-    <string>Apple Distribution</string>
+    <string>iPhone Distribution</string>
     <key>provisioningProfiles</key>
     <dict>
      <key>maxeem.america.flutter.converter</key>
-     <string>Converter GitHub Actions Dist</string>
+     <string>iOS Team Store Provisioning Profile</string>
  </dict>
 </dict>
 </plist>
