--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -16,84 +16,23 @@ jobs:
           echo "Dump env variables"
           set
           echo
-      - name: Select 12.4 Xcode
-        run: sudo xcode-select -s /Applications/Xcode_12.4.app
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD: 123456
-          #${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH="$RUNNER_TEMP/4349acc7-3513-4ba7-a980-750fa87dc2be.mobileprovision"
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-          
-          # prints secrets
-          echo
-          echo "BUILD_CERTIFICATE_BASE64: $BUILD_CERTIFICATE_BASE64"
-          echo "P12_PASSWORD: $P12_PASSWORD"
-          echo "BUILD_PROVISION_PROFILE_BASE64: $BUILD_PROVISION_PROFILE_BASE64"
-          echo "KEYCHAIN_PASSWORD: $KEYCHAIN_PASSWORD"
-          echo
-          
-          
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-          echo "CERTIFICATE_PATH: $CERTIFICATE_PATH"
-          ls -l $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-          echo "PP_PATH: $PP_PATH"
-          ls -l $PP_PATH
-          security cms -D -i $PP_PATH
-          #
-          
-          # create temporary keychain
-          echo "create temporary keychain, step 1: $KEYCHAIN_PASSWORD, $KEYCHAIN_PATH"
-          security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH || exit 1
-          ls -l $KEYCHAIN_PATH
-          echo "create temporary keychain, step 2"
-          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH || exit 1
-          echo "create temporary keychain, step 3"
-          security set-keychain-settings $KEYCHAIN_PATH
-          security list-keychains
-
-
-          # import certificate to keychain
-          echo "import certificate to keychain, step 1"
-          security import $CERTIFICATE_PATH -P $P12_PASSWORD -A -t cert -f pkcs12 -k $KEYCHAIN_PATH || exit 1
-          ls -l $CERTIFICATE_PATH
-          ls -l $KEYCHAIN_PATH
-          echo "import certificate to keychain, step 2"
-          security list-keychain -d user
-          security list-keychain -d user -s $KEYCHAIN_PATH || exit 1
-          security list-keychain -d user
-          ls -l $CERTIFICATE_PATH
-          echo
-          security add-certificates -k $KEYCHAIN_PATH ios_distribution.cer
-          security dump-keychain $KEYCHAIN_PATH
-          echo
-
-          # apply provisioning profile
-          echo "apply provisioning profile, step 1"
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles || exit 1
-          echo "apply provisioning profile, step 2"
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles || exit 1
-          echo "apply provisioning profile, step 3: list"
-          ls -l ~/Library/MobileDevice/Provisioning\ Profiles
-          echo
-          security set-key-partition-list -S apple-tool:,apple: -s -k "" "$KEYCHAIN_PATH"
+#      - run: sudo xcode-select -s /Applications/Xcode_12.4.app
+      - uses: ngeri/prepare-signing@v1.0.2
+        with:
+          appStoreConnectPrivateKey: ${{ secrets.APPSTORECONNECTPRIVATEKEY }}
+          keyID: 3L3N58WDY7
+          issuerID: 1bbfc512-3fd2-4926-a061-493018bf22a5
+          base64P12File: ${{ secrets.BASE64P12FILE }}
+          p12Password: ${{ secrets.P12_PASSWORD }}
+          bundleIdentifier: maxeem.america.flutter.converter
+          signType: IOS_APP_STORE
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
       - run: flutter build ios --no-codesign
       - run: |
-          echo "check KEYCHAIN_PATH before build: $KEYCHAIN_PATH"
-          ls -l $RUNNER_TEMP/app-signing.keychain-db
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive "OTHER_CODE_SIGN_FLAGS=--keychain $RUNNER_TEMP/app-signing.keychain-db"
-          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa
+          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
+          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
         working-directory: ios
 #        run: flutter build ipa -v --export-options-plist=ios/ExportOptions.plist
 #      - uses: wzieba/Firebase-Distribution-Github-Action@v1
