ci: experiment with iOS CI config

--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -12,7 +12,7 @@
     <key>provisioningProfiles</key>
     <dict>
      <key>maxeem.america.flutter.converter</key>
-     <string>Converter GitHub Actions Dist</string>
- </dict>
+     <string>a738cc2a-b796-4359-9c9d-2d4c25cacce0</string>
+    </dict>
 </dict>
 </plist>
