--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -8,12 +8,12 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set Xcode Version
-      run: sudo xcode-select -s /Applications/Xcode_12.app/Contents/Developer
-      - run: |
-          echo "List of applications"
-          ls /Applications/
+      - uses: actions/checkout@v2
+      - name: Set Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode_12.app/Contents/Developer
+#      - run: |
+#          echo "List of applications"
+#          ls /Applications/
 #      - run: |
 #          echo "Dump env variables"
 #          set
