--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -60,14 +60,14 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
-      - run: flutter build ios --no-codesign
-      - run: |    
+      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
+#      - run: flutter build ios --no-codesign
+#      - run: |    
           xcodebuild -verbose -workspace Runner.xcworkspace -scheme Runner archive -archivePath build/Runner.xcarchive
 #          xcodebuild -verbose -exportArchive -archivePath build/Runner.xcarchive -exportPath build/myApp.ipa -exportFormat ipa -exportProvisioningProfile "iOS Team Store Provisioning Profile: maxeem.america.flutter.converter"
 #          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
 #          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
-        working-directory: ios
+#        working-directory: ios
 #      - uses: wzieba/Firebase-Distribution-Github-Action@v1
 #        with:
 #          appId: ${{secrets.FIREBASE_IOS_APPID}}
