ci: experiment with iOS CI config

--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -13,7 +13,7 @@
     <key>provisioningProfiles</key>
     <dict>
      <key>maxeem.america.flutter.converter</key>
-     <string>7d5bbec8-5af9-4a64-b3c9-6d9bbedd3b18</string>
+     <string>Converter - distr</string>
     </dict>
 </dict>
 </plist>
